--- a/themes/guitars/layouts/partials/navbar.html
+++ b/themes/guitars/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav>
 	<ul>
-		<li><a href="about.html" title="About">About</a></li>
-		<li><a href="guitars.html" title="Guitars">Guitars</a></li>
-		<li><a href="tools.html" title="Tools">Tools</a></li>
+		<li><a href="/" title="About">About</a></li>
+		<li><a href="/guitars/" title="Guitars">Guitars</a></li>
+		<li><a href="/tools/" title="Tools">Tools</a></li>
 	</ul>
 </nav>
