--- a/themes/guitars/layouts/index.html
+++ b/themes/guitars/layouts/index.html
@@ -1,7 +1,10 @@
 {{ partial "head.html" . }}
 {{ partial "navbar.html" . }}
 <div id="container">
-	{{ partial "header.html" . }}
+	<header class="bg-color">
+		{{ partial "header.html" . }}
+		{{ partial "welcome.html" . }}
+	</header>
 	<div class="base">
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
