Let's say I'm bad at finding good commit messages.

--- a/themes/guitars/layouts/guitar/li.html
+++ b/themes/guitars/layouts/guitar/li.html
@@ -3,5 +3,6 @@
 	<h3>{{ .Title }}</h3>
 	<div class="img-container">
 		<img src="/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg" />
+		<div class="loop"></div>
 	</div>
 </a>
