--- a/themes/guitars/layouts/guitar/single.html
+++ b/themes/guitars/layouts/guitar/single.html
@@ -37,6 +37,10 @@
 				<td>Fingerboard</td>
 				<td>{{ .Params.wt_fingerboard }}</td>
 			</tr>
+			<tr>
+				<td>Headstock overlay</td>
+				<td>{{ .Params.wt_headstock_overlay }}</td>
+			</tr>
 		</tbody>
 		</table>
 
