--- a/themes/guitars/layouts/section/guitar.html
+++ b/themes/guitars/layouts/section/guitar.html
@@ -10,7 +10,7 @@
 	</header>
 
 	<div class="base">
-		<p>Guitars are organized by type, e.g.: accoustic, steelstrings and electric guitars.</p>
+		<p>Guitars are organized by type, i.e.: accoustic, steelstrings and electric guitars.</p>
 	</div>
 
 	<!-- Accoustic -->
