--- a/themes/guitars/layouts/tool/single.html
+++ b/themes/guitars/layouts/tool/single.html
@@ -5,9 +5,13 @@
 
 	<header class="page-header">
 	<div class="base">
-		<h2><div class="triangle"></div> {{ .Title }}</h2>
+		<div class="triangle"></div>
+		<h2>Tools</h2>
+		<div class="triangle"></div>
+		<h2>{{ .Title }}</h2>
 	</div>
 	</header>
+
 
 	<div class="base">
 		{{ .Content }}
