--- a/themes/guitars/layouts/partials/header.html
+++ b/themes/guitars/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
 <div class="base">
-<h1>{{ .Site.Title }}</h1>
+<a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
 </div>
 </header>
