--- a/themes/guitars/layouts/section/tool.html
+++ b/themes/guitars/layouts/section/tool.html
@@ -5,7 +5,8 @@
 
 	<header class="page-header">
 	<div class="base">
-		<h2><div class="triangle"></div> {{ .Title }}</h2>
+		<div class="triangle"></div>
+		<h2>{{ .Title }}</h2>
 	</div>
 	</header>
 
@@ -15,17 +16,13 @@
 		<p>Here is a list of auxiliary tools I crafted by hand to help me build guitars.</p>
 	</div>
 	<div class="base">
+	<ul>
         {{ range $index, $element := .Data.Pages }}
-            {{ if modBool $index 2 }}
-            	<div class="tool-item alt">
-            {{ else }}
-            	<div class="tool-item">
-            {{ end}}
-
-	       		{{ $element.Title }}
-	        </div>
+        	<li>
+        	<a href="{{ .Permalink }}">{{ $element.Title }}</a>
+	       	</li>
         {{ end }}
-
+    </ul>
 
 	</div>
 	{{ partial "footer.html" . }}
