--- a/themes/guitars/static/css/style.css
+++ b/themes/guitars/static/css/style.css
@@ -23,16 +23,19 @@ header.site-header
 	background-image: url("/img/background.jpg");
 	padding: 0;
 }
-
-header.site-header h1
-{
-	text-align: center;
-	font-size: 60px;
-	font-variant: small-caps;
-	color: white;
-	font-family: OpenSans-Light;
-	font-weight: 300;
-}
+	header.site-header a
+	{
+		text-decoration: none;
+	}
+	header.site-header h1
+	{
+		text-align: center;
+		font-size: 60px;
+		font-variant: small-caps;
+		color: white;
+		font-family: OpenSans-Light;
+		font-weight: 300;
+	}
 
 /* General style */
 
@@ -78,6 +81,7 @@ header.page-header div.triangle
 	display: inline-block;
 	border: 9px solid transparent;
 	border-left: 9px solid black;
+	margin: 0 10px;
 }
 
 footer
@@ -123,17 +127,15 @@ nav
 	display: block;
 	background-color: black;
 	font-family: OpenSans-Regular;
-	/*position: fixed;*/
-	z-index: 1;
 }
 	nav ul
 	{
-		display: inline-block;
+		display: block;
 		padding: 0;
-		text-align: center;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		margin-left: 100px;
+		text-align: left;
+		margin: 0;
+		width: 800px;
+		margin: 0 auto;
 	}
 		nav ul li
 		{
@@ -176,10 +178,11 @@ div.list-guitars
 	list-style: none;
 	width: 200px;
 	float: left;
+	background-color: white;
 }
 .list-guitars.alt
 {
-	background-color: #F0F0F0;
+	-background-color: #F0F0F0;
 }
 div.list-guitars a
 {
@@ -199,12 +202,32 @@ div.list-guitars a:hover
 		width: 200px;
 		height: 200px;
 		overflow: hidden;
+		position: relative;
 	}
 		div.list-guitars div.img-container img
 		{
 			min-width: 100%;
 			min-height: 100%;
+			position: absolute;
 		}
+		div.list-guitars div.img-container div.loop
+		{
+			-display: none;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			z-index: 1;
+		}
+		div.list-guitars div.img-container div.loop:hover
+		{
+			display: block;
+			background-color: rgba(255, 255, 255, 0.3);
+			background-position: center;
+			background-repeat: no-repeat;
+			background-image: url("/img/more.png");
+		}
+
+
 
 
 /* Guitar Details page */
