--- a/themes/guitars/static/css/style.css
+++ b/themes/guitars/static/css/style.css
@@ -35,6 +35,7 @@ header.site-header
 		color: white;
 		font-family: OpenSans-Light;
 		font-weight: 300;
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 	}
 
 /* General style */
