Improved hover effect for guitars.

--- a/themes/guitars/layouts/partials/welcome.html
+++ b/themes/guitars/layouts/partials/welcome.html
@@ -4,6 +4,6 @@
 	<p>
 		{{ .Site.Params.welcome | markdownify }}
 	</p>
-	<div id="avatar"></div>
+	<div id="avatar" class="hvr-grow"></div>
 </div>
 </div>
