--- a/themes/guitars/layouts/guitar/li.html
+++ b/themes/guitars/layouts/guitar/li.html
@@ -2,7 +2,7 @@
 <a href="{{ .Permalink }}">
 	<h3>{{ .Title }}</h3>
 	<div class="img-container">
-		<img src="/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg" />
+		<img src="/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg" class="hvr-grow"  />
 		<div class="loop"></div>
 	</div>
 </a>
