Design tweaks using blue first letter and stuff.

--- a/themes/guitars/layouts/guitar/li.html
+++ b/themes/guitars/layouts/guitar/li.html
@@ -1,6 +1,6 @@
 
 <a href="{{ .Permalink }}">
-	<h3>{{ .Title }}</h3>
+	<span>{{ .Title }}</span>
 	<div class="img-container">
 		<img src="/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg" class="hvr-grow"  />
 		<div class="loop"></div>
