--- a/themes/guitars/layouts/partials/header.html
+++ b/themes/guitars/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <header class="site-header">
 <div class="base">
 <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
+<p>{{ .Site.Params.subtitle }}</p>
 </div>
 </header>
