--- a/themes/guitars/layouts/partials/navbar.html
+++ b/themes/guitars/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav>
 	<ul>
-		<li><a href="/" title="About">About</a></li>
-		<li><a href="/guitar/" title="Guitars">Guitars</a></li>
-		<li><a href="/tool/" title="Tools">Tools</a></li>
+		<li><a href="/" title="About" class="hvr-underline-from-left">About</a></li>
+		<li><a href="/guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
+		<li><a href="/tool/" title="Tools" class="hvr-underline-from-left">Tools</a></li>
 	</ul>
 </nav>
