--- a/themes/guitars/layouts/partials/welcome.html
+++ b/themes/guitars/layouts/partials/welcome.html
@@ -1,7 +1,7 @@
 <div class="alt">
 <div class="base">
 	<h2>Welcome!</h2>
-	<p>
+	<p class="welcome">
 		{{ .Site.Params.welcome | markdownify }}
 	</p>
 	<div id="avatar" class="hvr-grow"></div>
