--- a/themes/guitars/layouts/section/guitar.html
+++ b/themes/guitars/layouts/section/guitar.html
@@ -5,12 +5,13 @@
 
 	<header class="page-header">
 	<div class="base">
-		<h2><div class="triangle"></div> {{ .Title }}</h2>
+		<div class="triangle"></div>
+		<h2>{{ .Title }}</h2>
 	</div>
 	</header>
 
 	<div class="base">
-		<p>Guitars are organized by type, i.e.: accoustic, steelstrings and electric guitars.</p>
+		<p>Guitars are organized by type, i.e.: accoustic, steelstring and electric guitars.</p>
 	</div>
 
 	<!-- Accoustic -->
