--- a/themes/guitars/static/css/style.css
+++ b/themes/guitars/static/css/style.css
@@ -15,7 +15,14 @@ html
 	background-color: black;
 }
 
-/* Hover effect */
+strong
+{
+	font-family: OpenSans-Regular;
+	font-weight: bold;
+	color: #2098d1;
+}
+
+/* Grow effect */
 .hvr-grow {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
@@ -31,6 +38,39 @@ html
 .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+/* Underline From Left */
+.hvr-underline-from-left {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  overflow: hidden;
+}
+.hvr-underline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #2098d1;
+  height: 4px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+  right: 0;
 }
 
 /* Website Header */
@@ -53,6 +93,16 @@ header.site-header
 		color: white;
 		font-family: OpenSans-Light;
 		font-weight: 300;
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+	}
+	header.site-header p
+	{
+		width: 90%;
+		text-align: right;
+		margin-top: -20px;
+		color: #000;
+		font-family: OpenSans-Regular;
+		font-variant: small-caps;
 		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 	}
 
@@ -81,6 +131,10 @@ header.page-header h2
 	font-size: 25px;
 	padding: 0;
 	display: inline-block;
+}
+header.page-header h2:first-letter
+{
+	color: #2098d1;
 }
 
 header.page-header div.thumb
@@ -129,6 +183,15 @@ div.alt
 h2
 {
 	font-size: 40px;
+	padding-left: 40px;
+}
+h2:first-letter
+{
+	color: #2098d1;
+}
+h3:first-letter
+{
+	color: #2098d1;
 }
 
 #container
@@ -159,24 +222,26 @@ nav
 		nav ul li
 		{
 			display: inline-block;
-			padding: 14px;
+			padding: 14px 30px;
 		}
 			nav ul li a
 			{
 				text-transform: uppercase;
 				color: white;
 				text-decoration: none;
-			}
-
-			nav ul li a:hover
-			{
-				color: gray;
-				border-bottom: 2px solid gray;
+				padding: 3px;
 			}
 
 
 
 /* Homepage */
+
+p.welcome
+{
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
+}
 
 #avatar
 {
@@ -208,11 +273,14 @@ div.list-guitars a
 }
 div.list-guitars a:hover
 {
-	text-decoration: underline;;
+	text-decoration: underline;
 }
-	div.list-guitars h3
+	div.list-guitars span
 	{
 		text-align: center;
+		width: 100%;
+		display: block;
+		padding: 10px;
 	}
 	div.list-guitars div.img-container
 	{
