--- a/themes/guitars/layouts/index.html
+++ b/themes/guitars/layouts/index.html
@@ -7,6 +7,8 @@
 	<div class="base">
 	
 	</div>
+
+	{{ partial "contact.html" . }}
 	{{ partial "footer.html" . }}
 </div>
 {{ partial "foot.html" . }}
