--- a/themes/guitars/layouts/section/guitar.html
+++ b/themes/guitars/layouts/section/guitar.html
@@ -11,15 +11,15 @@
 	</header>
 
 	<div class="base">
-		<p>Guitars are organized by type, i.e.: accoustic, steelstring and electric guitars.</p>
+		<p>Guitars are organized by type, i.e.: classical, steelstring and electric guitars.</p>
 	</div>
 
-	<!-- Accoustic -->
+	<!-- Classical -->
 	<div>
 	<div class="base">
-	<h3>Accoustic</h3>
+	<h3>Classical</h3>
 	<div style="display: inline-block; width: 100%;">
-        {{ range $index, $element := (where .Data.Pages "Params.guitar_type" "accoustic") }}
+        {{ range $index, $element := (where .Data.Pages "Params.guitar_type" "classical") }}
             {{ if modBool $index 2 }}
             	<div class="list-guitars alt">
             {{ else }}
