--- a/themes/guitars/static/css/style.css
+++ b/themes/guitars/static/css/style.css
@@ -260,11 +260,6 @@ div.list-guitars
 	list-style: none;
 	width: 200px;
 	float: left;
-	background-color: white;
-}
-.list-guitars.alt
-{
-	-background-color: #F0F0F0;
 }
 div.list-guitars a
 {
@@ -282,12 +277,12 @@ div.list-guitars a:hover
 		text-align: center;
 		width: 100%;
 		display: block;
-		padding: 10px;
+		padding: 10px 0px;
 	}
 	div.list-guitars div.img-container
 	{
 		width: 200px;
-		height: 200px;
+		height: 350px;
 		overflow: hidden;
 		position: relative;
 	}
@@ -374,6 +369,11 @@ div.list-guitars a:hover
 		margin-left: 15%;
 	}
 
+
+div.base.markdown img
+{
+	max-width: 100%;
+}
 
 /* Contact form */
 form {
