--- a/themes/guitars/layouts/partials/navbar.html
+++ b/themes/guitars/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav>
 	<ul>
-		<li><a href="/" title="About" class="hvr-underline-from-left">About</a></li>
-		<li><a href="/guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
+		<li><a href="{{ .Site.BaseURL }}/" title="About" class="hvr-underline-from-left">About</a></li>
+		<li><a href="{{ .Site.BaseURL }}/guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
 	</ul>
 </nav>
