--- a/themes/guitars/layouts/section/guitar.html
+++ b/themes/guitars/layouts/section/guitar.html
@@ -11,7 +11,7 @@
 	</header>
 
 	<div class="base">
-		<p>Guitars are organized by type, i.e.: classical, steelstring and electric guitars.</p>
+		<p>Guitars are organized by type, i.e. classical, steelstring and electric guitars.</p>
 	</div>
 
 	<!-- Classical -->
