--- a/themes/guitars/layouts/guitar/li.html
+++ b/themes/guitars/layouts/guitar/li.html
@@ -2,7 +2,7 @@
 <a href="{{ .Permalink }}">
   <span>{{ if isset .Params "shorttitle" }}{{ .Params.shorttitle }}{{ else }}{{ .Title }}{{ end }}</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('{{ .Site.BaseURL }}/img/guitar/{{ .Source.File.BaseFileName }}/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
