--- a/themes/guitars/layouts/partials/head.html
+++ b/themes/guitars/layouts/partials/head.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{{ .Title }}</title>
-	<link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/normalize.css">
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css">
 </head>
 <body>
